--- a/readerBoard.html
+++ b/readerBoard.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="container futureDeparturesContainer">
-
+        <div></div>
     </div>
 </div>
 </body>
