Changed api call

--- a/readerBoard.html
+++ b/readerBoard.html
@@ -25,7 +25,13 @@
         </div>
     </div>
     <div class="container futureDeparturesContainer">
-        <div></div>
+        <table class="futureDeparturesTable">
+            <tr>
+                <th>Route</th>
+                <th>Arial Time</th>
+                <th>Departure Time</th>
+            </tr>
+        </table>
     </div>
 </div>
 </body>
