--- a/readerBoard.html
+++ b/readerBoard.html
@@ -11,7 +11,7 @@
     <div class="container titleBarContainer">
         <label class="title">STA Bus Departures</label>
     </div>
-    <div class="container nextDepartureContainer">
+    <div id="nextDeparture" class="container nextDepartureContainer">
         <div class="nextDepartureTitle">
             <label class="title">Next Departures</label>
         </div>
