--- a/readerBoard.html
+++ b/readerBoard.html
@@ -11,18 +11,11 @@
     <div class="container titleBarContainer">
         <label class="title">STA Bus Departures</label>
     </div>
-    <div id="nextDeparture" class="container nextDepartureContainer">
+    <div id="nextDepartureContainer" class="container nextDepartureContainer">
         <div class="nextDepartureTitle">
             <label class="title">Next Departures</label>
         </div>
-        <div class="container nextDepartureItem">
-            <label class="stopName">Stop 7 on Route 68 </label>
-            <label class="bigTime">12:42</label>
-        </div>
-        <div class="container nextDepartureItem">
-            <label class="stopName">Stop 5 on Route 66 </label>
-            <label class="bigTime">12:36</label>
-        </div>
+        <div id="nextDeparture" class="container nextDepartureItems"></div>
     </div>
     <div class="container futureDeparturesContainer">
         <table class="futureDeparturesTable">
