Added current time

--- a/readerBoard.html
+++ b/readerBoard.html
@@ -10,6 +10,7 @@
 <div class="container topContainer">
     <div class="container titleBarContainer">
         <label class="title">STA Bus Departures</label>
+        <label class="titleTime" id="currentTime"></label>
     </div>
     <div id="nextDepartureContainer" class="container nextDepartureContainer">
         <div class="nextDepartureTitle">
