Alert for departing buses working

--- a/readerBoard.html
+++ b/readerBoard.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container futureDeparturesContainer">
         <table class="futureDeparturesTable">
-            <tr>
+            <tr id="tableHeader">
                 <th>Route</th>
                 <th>Arial Time</th>
                 <th>Departure Time</th>
