Colors work now. Finished

--- a/readerBoard.html
+++ b/readerBoard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container topContainer">
-    <div class="container titleBarContainer">
+    <div id="titleBar" class="container titleBarContainer">
         <label class="title">STA Bus Departures</label>
         <label class="titleTime" id="currentTime"></label>
     </div>
@@ -19,7 +19,7 @@
         <div id="nextDeparture" class="container nextDepartureItems"></div>
     </div>
     <div class="container futureDeparturesContainer">
-        <table class="futureDeparturesTable">
+        <table id= "tab" class="futureDeparturesTable">
             <tr id="tableHeader">
                 <th>Route</th>
                 <th>Arial Time</th>
